--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/LabeledContentStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/LabeledContentStyles.xaml
@@ -24,6 +24,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
+        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Icons/InfoIconStyles.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
@@ -39,9 +40,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type customControls:LabeledContent}">
 
-                    <Grid
-                        Margin="0 0 0 8"
-                        Visibility="{TemplateBinding Visibility}">
+                    <Grid Visibility="{TemplateBinding Visibility}">
 
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" SharedSizeGroup="LabelColumn" />
@@ -49,10 +48,23 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             <ColumnDefinition Width="*" SharedSizeGroup="ValueColumn" />
                         </Grid.ColumnDefinitions>
 
-                        <Label
-                            Grid.Column="0"
-                            FontSize="{StaticResource DefaultFontSize}"
-                            Content="{TemplateBinding Label}" />
+                        <StackPanel Orientation="Horizontal">
+
+                            <ContentControl
+                                FontSize="{StaticResource DefaultFontSize}"
+                                Content="{TemplateBinding Label}" />
+
+                            <customControls:InfoPoint
+                                Margin="5 0 0 0"
+                                Visibility="{Binding InfoContent, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource NullToVisibilityConverter}}">
+
+                                <customControls:InfoPoint.InfoContent>
+                                    <ContentPresenter Content="{TemplateBinding InfoContent}" />
+                                </customControls:InfoPoint.InfoContent>
+
+                            </customControls:InfoPoint>
+
+                        </StackPanel>
 
                         <ContentPresenter
                             Grid.Column="2"
@@ -61,7 +73,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             <ContentPresenter.Resources>
                                 <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
                                     <Setter Property="TextWrapping" Value="Wrap" />
-                                    <Setter Property="FontSize" Value="20" />
                                 </Style>
                             </ContentPresenter.Resources>
                         </ContentPresenter>
