--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/PanelWithTitleStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/PanelWithTitleStyles.xaml
@@ -32,19 +32,19 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         x:Key="{x:Type customControls:PanelWithTitle}"
         TargetType="{x:Type customControls:PanelWithTitle}">
 
+        <Setter Property="Background" Value="{StaticResource PrimaryDarkBrush}" />
         <Setter Property="IsTabStop" Value="False" />
+        <Setter Property="ContentPadding" Value="20" />
 
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type customControls:PanelWithTitle}">
 
-                    <DockPanel>
+                    <DockPanel
+                        Margin="{TemplateBinding Padding}">
 
                         <Border
                             DockPanel.Dock="Top"
-                            BorderThickness="0 0 0 1"
-                            BorderBrush="{StaticResource BorderBrush}"
-                            Margin="0 0 0 10"
                             SnapsToDevicePixels="True"
                             Visibility="{TemplateBinding Title, Converter={StaticResource NullToVisibilityConverter}}">
 
@@ -63,7 +63,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             </ContentPresenter>
                         </Border>
 
-                        <ContentPresenter />
+                        <Border
+                            Background="{TemplateBinding Background}"
+                            Padding="{TemplateBinding ContentPadding}"
+                            BorderThickness="1 5 1 1"
+                            BorderBrush="{StaticResource BorderBrush}">
+
+                            <ContentPresenter />
+
+                        </Border>
 
                     </DockPanel>
 
